--- a/command/Makefile
+++ b/command/Makefile
@@ -12,7 +12,7 @@ CFLAGS		= -I ../include/ -c -fno-builtin -fno-stack-protector -Wall
 LDFLAGS		= -Ttext 0x1000
 DASMFLAGS	= -D
 LIB		= ../lib/orangescrt.a
-BIN		= echo pwd
+BIN		= echo pwd cd rmdir mkdir
 
 # All Phony Targets
 .PHONY : everything final clean realclean disasm all install
@@ -53,3 +53,21 @@ pwd.o: pwd.c ../include/type.h ../include/stdio.h
 
 pwd : pwd.o start.o $(LIB)
 	$(LD) $(LDFLAGS) -o $@ $?
+
+cd.o: cd.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+cd : cd.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $?
+
+rmdir.o: rmdir.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+rmdir : rmdir.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $?	
+
+mkdir.o: mkdir.c ../include/type.h ../include/stdio.h
+	$(CC) $(CFLAGS) -o $@ $<
+
+mkdir : mkdir.o start.o $(LIB)
+	$(LD) $(LDFLAGS) -o $@ $?	
